<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_encoder">

    <fragment
        android:id="@+id/navigation_encoder"
        android:name="fuck.system.enigma.ui.encoder.EncoderFragment"
        android:label="@string/title_encoder"
        tools:layout="@layout/fragment_encoder" />

    <fragment
        android:id="@+id/navigation_decoder"
        android:name="fuck.system.enigma.ui.decoder.DecoderFragment"
        android:label="@string/title_decoder"
        tools:layout="@layout/fragment_decoder" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="fuck.system.enigma.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>